Bug 1307402 - reformat if-else-statements in nsFirstLetterFrame.cpp to agree with mozilla coding style. r=jfkthame

MozReview-Commit-ID: L9V1cEkmtkF